[package]
name = "lau-ensign-sdk"
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance <superinstance@github.com>"]
description = "THE ensign development SDK — how to define and deploy an ensign (room DJ)."
license = "MIT"
repository = "https://github.com/SuperInstance/lau-ensign-sdk"
keywords = ["ensign", "sdk", "ai", "llm", "dj"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
lto = true
